Fixed word wrap bug

--- a/buildv3/sass/portfolio.scss
+++ b/buildv3/sass/portfolio.scss
@@ -243,7 +243,6 @@ html,body {
 }
 
 .subtitle-text-holder {
-	white-space: break-word;
 	margin-bottom:1.5em;
 	pointer-events:none;
 	zoom: 1;
